--- a/templates/edit.html
+++ b/templates/edit.html
@@ -3,9 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>编辑页面</title>
+    <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
 </head>
 <body>
 <h3>编辑页面</h3>
-{% include "form.html" %}
+<div class="row">
+    <div class="col-md-4 col-md-offset-3">
+        {% include 'form.html' %}
+    </div>
+</div>
 </body>
 </html>
